base/production/instalock-cron/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instalock-cron
  namespace: production
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: instalock-cron
  template:
    metadata:
      labels:
        app: instalock-cron
        version: "N/A"
    spec:
      containers:
        - name: instalock-cron
          image: tahminator/instalock-cron
          ports:
            - containerPort: 3051
          readinessProbe:
            httpGet:
              path: /
              port: 3051
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3051
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "450m"
            limits:
              memory: "512Mi"
              cpu: "750m"
