base/production/instalock-cron/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: instalock-cron-web
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`internal.instalock.app`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: instalock-cron
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: instalock-cron-websecure
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`internal.instalock.app`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: instalock-cron
          port: 80
  tls:
    secretName: production-instalock-cron-tls
